frontend/src/pages/memo.module.css
.container {
  width: 100%;
  color: #37352f;
}

.toolbar {
  margin-bottom: 1rem;
  font-size: 0.8rem;
  color: #868e96;
}

.toolbarItem {
  font-size: 0.8rem;
  color: #868e96;
  outline: none;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

.titleInput {
  width: 100%;
  font-size: 2rem;
  border: none;
  font-weight: bold;
  outline: none;
  padding: 0;
}

.selector {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
}

.selectorContent {
  background-color: white;
  padding: 4rem;
  max-width: 30rem;
  height: 100%;
  max-width: 50rem;
  flex-grow: 1;
  overflow: scroll;
}

.contentEditor {
  width: 100%;
  min-height: 80vh;
  resize: none;
  border: none;
  outline: none;
  padding: 0;
  font-size: 1rem;
}

.contentPreview li {
  margin-bottom: 0.5rem;
}

.contentPreview a {
  color: #007bff;
}

